fixed bullet points on mobile

--- a/style.css
+++ b/style.css
@@ -138,10 +138,6 @@ h1 {
 	color: #638CA6;
 }
 
-ul {
-	list-style-type: asterisks;
-}
-
 ul > li {
 	color: #17A697;
 }
